--- a/game.html
+++ b/game.html
@@ -16,8 +16,7 @@
       projectId: "broadgame-9bc04",
       storageBucket: "broadgame-9bc04.appspot.com",
       messagingSenderId: "220150025271",
-      appId: "1:220150025271:web:f4cfe780ebfd73e826c3b2",
-      measurementId: "G-6T9GW9LVD7"
+      appId: "1:220150025271:web:f4cfe780ebfd73e826c3b2"
     };
 
     const app = initializeApp(firebaseConfig);
@@ -74,7 +73,7 @@
 
         const playerRef = ref(db, `rooms/${room}/players/${player}`);
         await update(playerRef, { ended: true });
-        endStatus.innerHTML = "<span style='color: green;'>✅ 你已結束今日動作，等待其他玩家...</span>";
+        endStatus.innerHTML = "✅ 你已結束今日動作，等待其他玩家...";
 
         const playersRef = ref(db, `rooms/${room}/players`);
         const playersSnap = await get(playersRef);
@@ -90,25 +89,17 @@
 
         if (allEnded) {
           for (let name in players) {
-            const playerData = players[name];
-            const money = playerData.money || 0;
-            const updateData = {
+            const money = players[name].money || 0;
+            await update(ref(db, `rooms/${room}/players/${name}`), {
               money: money + 100,
               ended: false
-            };
-
-            // 如果是投資代理人，重設 invested，並讓 roundsLeft 減 1
-            if (playerData.role === "投資代理人" && playerData.agentOption) {
-              const currentRounds = playerData.agentOption.roundsLeft || 1;
-              updateData["agentOption/invested"] = false;
-              updateData["agentOption/roundsLeft"] = Math.max(0, currentRounds - 1);
-            }
-
-            const pRef = ref(db, `rooms/${room}/players/${name}`);
-            await update(pRef, updateData);
+            });
           }
 
-          endStatus.innerHTML = "<span style='color: green;'>🎉 所有人皆已結束！新的一天開始，已發放 $100</span>";
+          // ✅ 通知代理人角色回合結束
+          await set(ref(db, `rooms/${room}/turnEnded`), true);
+
+          endStatus.innerHTML = "🎉 所有人皆已結束！新的一天開始，已發放 $100";
         }
       });
     });
@@ -149,13 +140,12 @@
       const myInvestmentSnap = await get(myInvestmentRef);
       const myInvestments = myInvestmentSnap.val() || {};
 
-      await update(ref(db, `rooms/${room}/players/${player}/myInvestments`), {
+      await update(myInvestmentRef, {
         [target]: (myInvestments[target] || 0) + amount
       });
 
       loadMyInvestments();
-
-      investStatus.innerHTML = `<span style='color: green;'>✅ 成功投資 ${target} $${amount}</span>`;
+      investStatus.innerHTML = `✅ 成功投資 ${target} $${amount}`;
     }
 
     function loadMyInvestments() {
