--- a/game.html
+++ b/game.html
@@ -219,7 +219,7 @@
     <p id="investStatus"></p>
 
     <div style="margin-top: 1rem;">
-      <button id="endTurnBtn">✅ 我已完成本回合動作</button>
+      <button id="endTurnBtn">結束本回合動作</button>
       <p id="endTurnStatus" style="color: green;"></p>
     </div>
   </div>
