--- a/game.html
+++ b/game.html
@@ -71,8 +71,20 @@
         if (allDone) {
           for (const [name, data] of Object.entries(players)) {
             const newMoney = (data.money || 0) + 100;
+            const remainingRounds = (data.rounds || 1) - 1;
+
             await update(ref(db), {
               [`rooms/${room}/players/${name}/money`]: newMoney,
+              [`rooms/${room}/players/${name}/done`]: false,
+              [`rooms/${room}/players/${name}/rounds`]: remainingRounds < 0 ? 0 : remainingRounds,
+              [`rooms/${room}/players/${name}/agentChoice`]: null,
+              [`rooms/${room}/players/${name}/agentResult`]: null
+            });
+          }
+          const endRoundNotice = document.getElementById("endRoundNotice");
+          endRoundNotice.textContent = "🎉 所有人已結束本回合，已自動發放 $100 並重置投資選擇與回合數 -1！";
+          endRoundNotice.style.display = "block";
+        }/players/${name}/money`]: newMoney,
               [`rooms/${room}/players/${name}/done`]: false
             });
           }
@@ -219,7 +231,7 @@
     <p id="investStatus"></p>
 
     <div style="margin-top: 1rem;">
-      <button id="endTurnBtn">結束本回合動作</button>
+      <button id="endTurnBtn">✅ 我已完成本回合動作</button>
       <p id="endTurnStatus" style="color: green;"></p>
     </div>
   </div>
