--- a/game.html
+++ b/game.html
@@ -1,3 +1,4 @@
+//game.html
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -71,11 +72,8 @@
         if (allDone) {
           for (const [name, data] of Object.entries(players)) {
             const newMoney = (data.money || 0) + 100;
-            const remainingRounds = (data.rounds || 1) - 1;
-
             await update(ref(db), {
-              [`rooms/${room
-        }/players/${name}/money`]: newMoney,
+              [`rooms/${room}/players/${name}/money`]: newMoney,
               [`rooms/${room}/players/${name}/done`]: false
             });
           }
@@ -222,7 +220,7 @@
     <p id="investStatus"></p>
 
     <div style="margin-top: 1rem;">
-      <button id="endTurnBtn">✅ 我已完成本回合動作</button>
+      <button id="endTurnBtn">結束本回合動作</button>
       <p id="endTurnStatus" style="color: green;"></p>
     </div>
   </div>
