--- a/game.html
+++ b/game.html
@@ -74,7 +74,9 @@
             const newMoney = (data.money || 0) + 100;
             await update(ref(db), {
               [`rooms/${room}/players/${name}/money`]: newMoney,
-              [`rooms/${room}/players/${name}/done`]: false
+              [`rooms/${room}/players/${name}/done`]: false,
+              [`rooms/${room}/players/${name}/rounds`]: (data.rounds ?? 1) - 1,
+              [`rooms/${room}/players/${name}/agentOption/roundsLeft`]: (data.agentOption?.roundsLeft ?? 1) - 1
             });
           }
           const endRoundNotice = document.getElementById("endRoundNotice");
