--- a/game.html
+++ b/game.html
@@ -1,4 +1,3 @@
-//game.html 結束動作可以減去回合數
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -45,7 +44,6 @@
       const playersRef = ref(db, `rooms/${room}/players`);
       onValue(playersRef, async (snap) => {
         const players = snap.val() || {};
-
         const targetSelect = document.getElementById("target");
         const targetStatus = document.getElementById("targetStatus");
         targetSelect.innerHTML = "";
@@ -72,15 +70,29 @@
         if (allDone) {
           for (const [name, data] of Object.entries(players)) {
             const newMoney = (data.money || 0) + 100;
-            await update(ref(db), {
+            const roundsLeft = (data.agentOption?.roundsLeft ?? 1) - 1;
+
+            const updates = {
               [`rooms/${room}/players/${name}/money`]: newMoney,
               [`rooms/${room}/players/${name}/done`]: false,
               [`rooms/${room}/players/${name}/rounds`]: (data.rounds ?? 1) - 1,
-              [`rooms/${room}/players/${name}/agentOption/roundsLeft`]: (data.agentOption?.roundsLeft ?? 1) - 1
-            });
+              [`rooms/${room}/players/${name}/agentOption/roundsLeft`]: roundsLeft
+            };
+
+            if (roundsLeft <= 0 && data.role === "投資代理人") {
+              updates[`rooms/${room}/players/${name}/agentOption/locked`] = false;
+              updates[`rooms/${room}/players/${name}/agentOption/option`] = null;
+              updates[`rooms/${room}/players/${name}/agentOption/invested`] = false;
+              updates[`rooms/${room}/players/${name}/agentOption/options`] = null;
+            } else {
+              updates[`rooms/${room}/players/${name}/agentOption/invested`] = false;
+            }
+
+            await update(ref(db), updates);
           }
+
           const endRoundNotice = document.getElementById("endRoundNotice");
-          endRoundNotice.textContent = "🎉 所有人已結束本回合，已自動發放 $100！";
+          endRoundNotice.textContent = "🎉 所有人已結束本回合，已自動發放 $100 並更新角色狀態！";
           endRoundNotice.style.display = "block";
         }
       });
