--- a/game.html
+++ b/game.html
@@ -222,6 +222,7 @@
   <div class="card">
     <h2>玩家：<span id="playerName">載入中...</span></h2>
     <p>💰 餘額：<strong id="money">$0</strong></p>
+    <p id="scammerNotice" style="color: green;"></p>
   </div>
 
   <div class="card" id="rolePanel">
