--- a/game.html
+++ b/game.html
@@ -78,8 +78,9 @@
                 [`rooms/${room}/players/${name}/money`]: newMoney,
                 [`rooms/${room}/players/${name}/done`]: false,
                 [`rooms/${room}/players/${name}/rounds`]: (data.rounds ?? 1) - 1,
-                [`rooms/${room}/players/${name}/agentOption/invested`]: false,
-                [`rooms/${room}/players/${name}/scammerGotInvestment`]: false // 重置每回合
+                [`rooms/${room}/players/${name}/agentOption/invested`]: false, //代理人重製投資功能
+                [`rooms/${room}/players/${name}/scammerGotInvestment`]: false,// 重置每回合
+                [`rooms/${room}/players/${name}/agentOption/roundsLeft`]: roundsLeft,//回合數減去
               };
             
             if (isScammer && !gotInvested) {
@@ -91,7 +92,6 @@
               updates[`rooms/${room}/players/${name}/agentOption/option`] = null;
               updates[`rooms/${room}/players/${name}/agentOption/invested`] = false;
               updates[`rooms/${room}/players/${name}/agentOption/options`] = null;
-              updates[`rooms/${room}/players/${name}/agentOption/roundsLeft`] = roundsLeft;
             }
 
             await update(ref(db), updates);
