--- a/game.html
+++ b/game.html
@@ -94,6 +94,7 @@
                   const investors = data.investors || {};
                   if (Object.keys(investors).length > 0 && !data.hasGivenBack) {
                     updates[`rooms/${room}/players/${name}/money`] = (updates[`rooms/${room}/players/${name}/money`] || 0) - 1000;
+                    notice.textContent = "今日尚未回饋，扣除1000元";
                   }
             
                   // 方案自動重設
