--- a/game.html
+++ b/game.html
@@ -95,6 +95,8 @@
                   if (Object.keys(investors).length > 0 && !data.hasGivenBack) {
                     updates[`rooms/${room}/players/${name}/money`] = (updates[`rooms/${room}/players/${name}/money`] || 0) - 1000;
                     notice.textContent = "今日尚未回饋，扣除1000元";
+                    notice.style.color = "red";
+                    notice.style.display = "block";
                   }
             
                   // 方案自動重設
