--- a/game.html
+++ b/game.html
@@ -100,7 +100,7 @@
                   updates[`rooms/${room}/players/${name}/penaltyNotice`] = "任職期間未回饋，扣除1000元";
                 } else {
                   // 沒罰則時清空提示
-                  updates[`rooms/${room}/players/${name}/penaltyNotice`] = "";
+                  updates[`rooms/${room}/players/${name}/penaltyNotice`] = "任職期間請回饋，否則扣除1000元";
                 }
                 // 方案重設
               //  updates[`rooms/${room}/players/${name}/agentOption/locked`] = false;
