--- a/game.html
+++ b/game.html
@@ -197,7 +197,7 @@
       const myMoney = mySnap.val() || 0;
 
       if (amount > myMoney) {
-        investStatus.innerHTML = "❌ <span style='color:red;'>投資失敗，損失 $" + amount + "</span>";
+        investStatus.innerHTML = "❌ <span style='color:red;'>投資失敗，餘額不足 "</span>";
         return;
       }
 
