--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
 
     document.addEventListener("DOMContentLoaded", async () => {
       document.getElementById("playerName").textContent = player;
-
+       // 餘額即時監聽
       const moneyRef = ref(db, `rooms/${room}/players/${player}/money`);
       get(moneyRef).then(async snap => {
         if (!snap.exists()) {
@@ -37,10 +37,16 @@
           document.getElementById("money").textContent = "$" + (snap.val() ?? 0);
         });
       });
-
-  
-
-      renderRoleUI(player, room);
+      
+        // ⭐⭐⭐ 角色資訊即時監聽（推薦直接監聽整個玩家物件）
+        const playerRef = ref(db, `rooms/${room}/players/${player}`);
+        onValue(playerRef, snap => {
+          // 這裡只要你的角色（role）、choose、money 之類有改，UI 就會自動更新
+          renderRoleUI(player, room);
+          // 如果你想同步刷新餘額，可以：
+          document.getElementById("money").textContent = "$" + (snap.val()?.money ?? 0);
+        });
+      
       loadMyInvestments();
 
       const playersRef = ref(db, `rooms/${room}/players`);
