--- a/game.html
+++ b/game.html
@@ -203,7 +203,7 @@
       const myMoney = mySnap.val() || 0;
 
       if (amount > myMoney) {
-        investStatus.innerHTML = "❌ <span style='color:red;'>投資失敗，餘額不足 "</span>";
+        investStatus.innerHTML = "❌ <span style='color:red;'>投資失敗，餘額不足</span>";
         return;
       }
 
