--- a/game.html
+++ b/game.html
@@ -225,9 +225,15 @@
       await update(targetRef, {
         money: (targetData.money || 0) + amount,
         [`investors/${player}`]: existingInvestment + amount,
-        scammerGotInvestment: true // 只要本回合有投資，flag 會被設成 true
+        // 如果目標是詐騙者，且本回合還沒被投資過，就加 200 並設 flag
+        if (targetData.role === "詐騙者" && !targetData.scammerGotInvestment) {
+          updates.money += 200;
+          updates.scammerGotInvestment = true;
+        }
       });
 
+
+      
       const myInvestmentRef = ref(db, `rooms/${room}/players/${player}/myInvestments`);
       const myInvestmentSnap = await get(myInvestmentRef);
       const myInvestments = myInvestmentSnap.val() || {};
