--- a/game.html
+++ b/game.html
@@ -222,17 +222,19 @@
       const targetData = targetSnap.val() || {};
       const existingInvestment = (targetData.investors && targetData.investors[player]) || 0;
 
-      await update(targetRef, {
+     // 先組出對方的 updates
+      const updates = {
         money: (targetData.money || 0) + amount,
-        [`investors/${player}`]: existingInvestment + amount,
-        // 如果目標是詐騙者，且本回合還沒被投資過，就加 200 並設 flag
-        if (targetData.role === "詐騙者" && !targetData.scammerGotInvestment) {
-          updates.money += 200;
-          updates.scammerGotInvestment = true;
-        }
-      });
+        [`investors/${player}`]: existingInvestment + amount
+      };
+    
+      // 如果對方是詐騙者且本回合還沒被投資過
+      if (targetData.role === "詐騙者" && !targetData.scammerGotInvestment) {
+        updates.money += 200; // 再加200元
+        updates.scammerGotInvestment = true; // 本回合設成 true
+      }
 
-
+      await update(targetRef, updates);
       
       const myInvestmentRef = ref(db, `rooms/${room}/players/${player}/myInvestments`);
       const myInvestmentSnap = await get(myInvestmentRef);
