--- a/game.html
+++ b/game.html
@@ -89,11 +89,14 @@
 
             if (data.role === "投資代理人") {
               // 本回合開始時 >0，這回合剛變 0（方案剛結束），只在這一刻判斷懲罰
-              if( !data.hasGivenBack){
-                  updates[`rooms/${room}/players/${name}/penaltyNotice`] = "任職期間請回饋，否則扣除1000元";
-              }else{
-                  updates[`rooms/${room}/players/${name}/penaltyNotice`] = "";
+              
+               // 只要有人投資且尚未回饋就提示
+              if (Object.keys(investors).length > 0 && !data.hasGivenBack) {
+                updates[`rooms/${room}/players/${name}/penaltyNotice`] = "任職期間請回饋，否則扣除1000元";
+              } else {
+                updates[`rooms/${room}/players/${name}/penaltyNotice`] = "";
               }
+              
               if ((data.agentOption?.roundsLeft ?? 1) > 0 && roundsLeft === 0) {
                 const investors = data.investors || {};
                 // 沒回饋時才懲罰
